hello-namespace/config-root/policies/pss-baseline-v2022/host-ports.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata: # kpt-merge: /pss-baseline-v2022-host-ports
  name: pss-baseline-v2022-host-ports
  labels:
    policycontroller.gke.io/bundleName: pss-baseline-v2022
  annotations:
    policycontroller.gke.io/constraintData: |
      "{
        bundleName: 'pss-baseline-v2022',
        bundleDisplayName: 'Pod Security Standards Baseline v2022',
        bundleLink: 'https://github.com/GoogleCloudPlatform/acm-policy-controller-library/tree/master/bundles/pss-baseline-v2022',
        bundleVersion: '202301.0',
        bundleDescription: 'Use the Pod Security Standards Baseline v2022 policy bundle with Anthos Policy Controller to achieve many of the protections of the Kubernetes Pod Security Standards Baseline policy.',
        controlNumbers: '[]',
        severity: 'UNASSIGNED',
        description: 'HostPorts should be disallowed, or at minimum restricted to a known list.  https://kubernetes.io/docs/concepts/security/pod-security-standards/#baseline',
        remediation: '',
        minimumTemplateLibraryVersion: '1.11.1'
      }"
    internal.kpt.dev/upstream-identifier: 'constraints.gatekeeper.sh|K8sPSPHostNetworkingPorts|default|pss-baseline-v2022-host-ports'
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
    excludedNamespaces:
    - kube-system
  parameters:
    # A minimum restricted known list can be implemented here.
    min: 0
    max: 0
